# oma-service-mcp

./: .env.example  Containerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/openshift/: configmap.yaml  deployment.yaml  route.yaml  secret.yaml  service.yaml
deploy/templates/: service-template.yml
examples/: lightspeed-stack.yaml
oma_service_mcp/: __init__.py
oma_service_mcp/src/: __init__.py  api.py  logger.py  main.py  mcp.py  mcp_server.py  settings.py  stdio.py
oma_service_mcp/src/service_client/: __init__.py  exceptions.py  migration_planner_client.py
oma_service_mcp/src/tools/: __init__.py  assessment_tools.py  estimation_tools.py  source_tools.py  system_tools.py
oma_service_mcp/utils/: __init__.py  auth.py
tests/: __init__.py  conftest.py  test_assessment_tools.py  test_auth.py  test_estimation_tools.py  test_exceptions.py  test_logger.py  test_mcp_server.py  test_migration_planner_client.py  test_settings.py  test_source_tools.py  test_system_tools.py
