[project]
name = "oma-service-mcp"
version = "0.1.0"
description = "MCP Server for Migration Planner Service API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.15.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.1",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.12.1",
    "pytest>=8.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose --cov=oma_service_mcp --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.mypy]
follow_imports = "skip"
explicit_package_bases = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
